--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ header .fa-bars {
   background-image:
     linear-gradient(45deg,
       rgba(0, 0, 0, 0.75),
-      rgba(0, 0, 0, 0.75)), url('images/home-bg.png');
+      rgba(0, 0, 0, 0.75)), url('home-bg.png');
   height: 100vh;
   background-size: cover;
   background-position: center;
