--- a/style.css
+++ b/style.css
@@ -225,6 +225,7 @@ header .fa-bars {
   letter-spacing: 1rem;
   font-weight: 900;
   word-spacing: 5px;
+  text-align: center;
 
   /* text-transform: uppercase; */
   color: #fff;
@@ -317,6 +318,7 @@ header .fa-bars {
 
 .ignite-intro p {
   font-size: 2.5rem;
+  text-align: center;
   color: #fff;
 }
 
