--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ header .fa-bars {
 }
 
 .home {
-  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(home.jpg);
+  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(/home.jpg);
   height: 100vh;
   background-size: cover;
   background-position: center;
